--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   command = "chmod +x .netlify/build.sh && bash .netlify/build.sh"
   publish = "_site"
+  environment = { PHP_VERSION = "7.2" }
 
 [context.deploy-preview]
   command = "chmod +x .netlify/build.sh && bash .netlify/build.sh preview"
