--- a/netlify.toml
+++ b/netlify.toml
@@ -1,10 +1,12 @@
 [build]
-  command = "chmod +x .netlify/build.sh && bash .netlify/build.sh"
   publish = "_site"
-  environment = { PHP_VERSION = "7.2" }
+  command = "chmod +x .netlify/build.sh && bash .netlify/build.sh"
+[build.environment]
+  PHP_VERSION = "7.2"
+  CECIL_ENV = "production"
 
-[context.deploy-preview]
-  command = "chmod +x .netlify/build.sh && bash .netlify/build.sh preview"
+[context.deploy-preview.environment]
+  CECIL_ENV = "preview"
 
 [context.branch-deploy]
-  command = "chmod +x .netlify/build.sh && bash .netlify/build.sh preview"
+  CECIL_ENV = "branch"
