--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,7 @@
 [build.environment]
   PHP_VERSION = "7.2"
   CECIL_ENV = "production"
+  CECIL_CACHE_DIR = "/opt/build/cache/"
 
 [context.deploy-preview.environment]
   CECIL_ENV = "preview"
