--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,6 @@
 title: studio cecillie
-baseline: Le studio de conseil technique et créatif
-description: Le studio cecillie est le studio de conseil technique et créatif de Cécile Ricordeau et Arnaud Ligny.
+baseline: Le studio de conseil technique & créatif
+description: Le studio cecillie est le studio de conseil technique & créatif de Cécile Ricordeau et Arnaud Ligny.
 baseurl: https://studio.cecillie.fr/
 image: og-image.png
 netlify:
