--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "studio-cecillie",
   "devDependencies": {
-    "tailwindcss": "^3.0"
+    "tailwindcss": "^3.3"
+  },
+  "scripts": {
+    "build": "NODE_ENV=production npx tailwindcss -i ./assets/tailwind.css -o ./assets/styles.css",
+    "watch": "npx tailwindcss -i ./assets/tailwind.css -o ./assets/styles.css --watch"
   }
 }
